2005-07-07  Nick Clifton  <nickc@redhat.com>

	* gas/arm/vfp1xD.d: Adjust expected fadds disassemblies now that
	the dissassembler has been fixed.

2005-05-07  Paul Brook  <paul@codesourcery.com>

	* gas/ppc/altivec.d: Match all powerpc target vecs.
	* gas/ppc/booke.d: Ditto.
	* gas/ppc/e500.d: Ditto.

2005-07-05  Aldy Hernandez  <aldyh@redhat.com>

	* gas/ms1: New directory.
	* gas/ms1/allinsn.d: New.
	* gas/ms1/allinsn.s: New.
	* gas/ms1/badinsn.s: New.
	* gas/ms1/badinsn1.s: New.
	* gas/ms1/badoffsethigh.s: New.
	* gas/ms1/badoffsetlow.s: New.
	* gas/ms1/badorder.s: New.
	* gas/ms1/badreg.s: New.
	* gas/ms1/badsignedimmhigh.s: New.
	* gas/ms1/badsignedimmlow.s: New.
	* gas/ms1/badsyntax.s: New.
	* gas/ms1/badsyntax1.s: New.
	* gas/ms1/badunsignedimmhigh.s: New.
	* gas/ms1/badunsignedimmlow.s: New.
	* gas/ms1/errors.exp: New.
	* gas/ms1/ldst.s: New.
	* gas/ms1/misc.d: New.
	* gas/ms1/misc.s: New.
	* gas/ms1/ms1-16-003.d: New.
	* gas/ms1/ms1-16-003.s: New.
	* gas/ms1/ms1.exp: New.
	* gas/ms1/msys.d: New.
	* gas/ms1/msys.s: New.
	* gas/ms1/relocs.d: New.
	* gas/ms1/relocs.exp: New.
	* testsuite/gas/ms1/relocs1.s: New.
	* testsuite/gas/ms1/relocs2.s: New.

2005-07-05  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/svme.d: New.
	* gas/i386/svme.s: New.
	* gas/i386/svme64.d: New.
	* gas/i386/i386.exp: Run new tests.

2005-07-04  Zack Weinberg  <zack@codesourcery.com>

	* lib/gas-defs.exp (run_dump_tests): New proc.
	(run_dump_test): Add support for new options: target, not-target,
	skip, not-skip, error-output.  Document stderr.  Tidy a
	little.
	(slurp_options): If a line doesn't match the option regexp, but
	does begin with #, ignore it; don't stop parsing options.
	* gas/arm/arm.exp: Remove most code.  Use run_dump_tests.

	* gas/arm/archv6t2-bad.d, gas/arm/armv1.d, gas/arm/iwmmxt-bad.d
	* gas/arm/r15-bad.d, gas/arm/req.d, gas/arm/t16-bad.d
	* gas/arm/undefined.d, gas/arm/undefined_coff.d, gas/arm/vfp-bad.d:
	New files.